// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Add Recipient item > should render with exchange amount 1`] = `
<DocumentFragment>
  <div
    class="group cursor-pointer items-center rounded-lg border border-theme-primary-200 transition-all hover:bg-theme-navy-100 dim:border-theme-dim-700 dim-hover:bg-theme-dim-700 dark:border-theme-dark-700 dark:hover:bg-theme-dark-700"
    data-testid="AddRecipientItem"
  >
    <div
      class="flex items-center px-4 py-3 duration-150"
    >
      <button
        class="relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-all duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none p-1 text-theme-secondary-700 hover:bg-theme-danger-400 hover:text-white dim:text-theme-dim-200 dim-hover:text-white dark:text-theme-secondary-500 dark:hover:text-white"
        data-testid="AddRecipientItem--deleteButton-1"
        type="button"
      >
        <div
          class="flex items-center gap-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="trash"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </button>
      <div
        class="ml-4 flex w-full min-w-0 items-center justify-between border-l border-theme-primary-200 pl-4 font-semibold text-theme-secondary-700 dim:border-theme-dim-700 dim:text-theme-dim-200 dark:border-theme-dark-700 dark:text-theme-dark-200"
      >
        <div
          class="flex w-1/2 min-w-0 flex-col space-y-2 truncate"
        >
          <div
            class="text-sm leading-[17px] group-hover:text-theme-primary-900 dim:group-hover:text-theme-dim-50 dark:group-hover:text-theme-dark-200"
          >
            Recipient #2
          </div>
          <div
            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
          >
            <span
              class="font-semibold text-base leading-5 text-theme-text"
              data-testid="Address__alias"
            >
              <span>
                <span>
                  <span
                    class="no-ligatures transition-colors duration-200"
                    data-testid="TruncateEnd"
                  >
                    Mainsail Wallet …
                  </span>
                </span>
              </span>
            </span>
            <span>
              <span>
                <span
                  class="no-ligatures min-w-0 overflow-hidden text-sm leading-[17px] text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 font-semibold text-base"
                  data-testid="Address__address"
                >
                  0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                </span>
              </span>
            </span>
          </div>
        </div>
        <div
          class="flex w-1/2 min-w-0 flex-col items-end space-y-2 self-end"
        >
          <div
            data-testid="AddRecipientItem--exchangeAmount"
          >
            <span
              class="whitespace-nowrap text-sm leading-[17px]"
              data-testid="Amount"
            >
              $0.00
            </span>
          </div>
          <span
            class="whitespace-nowrap leading-5 group-hover:text-theme-primary-900 dim:group-hover:text-theme-dim-50 dark:group-hover:text-theme-dark-200"
            data-testid="Amount"
          >
            1.00 DARK
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add Recipient item > should render with size lg 1`] = `
<DocumentFragment>
  <div
    class="group cursor-pointer items-center rounded-lg border border-theme-primary-200 transition-all hover:bg-theme-navy-100 dim:border-theme-dim-700 dim-hover:bg-theme-dim-700 dark:border-theme-dark-700 dark:hover:bg-theme-dark-700"
    data-testid="AddRecipientItem"
  >
    <div
      class="flex items-center px-4 py-3 duration-150"
    >
      <button
        class="relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-all duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none p-1 text-theme-secondary-700 hover:bg-theme-danger-400 hover:text-white dim:text-theme-dim-200 dim-hover:text-white dark:text-theme-secondary-500 dark:hover:text-white"
        data-testid="AddRecipientItem--deleteButton-1"
        type="button"
      >
        <div
          class="flex items-center gap-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="trash"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </button>
      <div
        class="ml-4 flex w-full min-w-0 items-center justify-between border-l border-theme-primary-200 pl-4 font-semibold text-theme-secondary-700 dim:border-theme-dim-700 dim:text-theme-dim-200 dark:border-theme-dark-700 dark:text-theme-dark-200"
      >
        <div
          class="flex w-1/2 min-w-0 flex-col space-y-2 truncate"
        >
          <div
            class="text-sm leading-[17px] group-hover:text-theme-primary-900 dim:group-hover:text-theme-dim-50 dark:group-hover:text-theme-dark-200"
          >
            Recipient #2
          </div>
          <div
            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
          >
            <span
              class="font-semibold text-base leading-5 text-theme-text"
              data-testid="Address__alias"
            >
              <span>
                <span>
                  <span
                    class="no-ligatures transition-colors duration-200"
                    data-testid="TruncateEnd"
                  >
                    Mainsail Wallet …
                  </span>
                </span>
              </span>
            </span>
            <span>
              <span>
                <span
                  class="no-ligatures min-w-0 overflow-hidden text-sm leading-[17px] text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 font-semibold text-base"
                  data-testid="Address__address"
                >
                  0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                </span>
              </span>
            </span>
          </div>
        </div>
        <div
          class="flex w-1/2 min-w-0 flex-col items-end space-y-2 self-end"
        >
          <span
            class="whitespace-nowrap leading-5 group-hover:text-theme-primary-900 dim:group-hover:text-theme-dim-50 dark:group-hover:text-theme-dark-200"
            data-testid="Amount"
          >
            1.00 DARK
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add Recipient item > should render with size xs 1`] = `
<DocumentFragment>
  <div
    class="mb-3 overflow-hidden rounded border border-theme-secondary-300 bg-white last:mb-0 dim:border-theme-dim-700 dim:bg-transparent dark:border-theme-dark-700 dark:bg-theme-dark-900 sm:rounded-none sm:border-x-0 sm:border-b-0 sm:border-dashed sm:bg-transparent sm:pt-3 sm:dark:bg-transparent"
    data-testid="AddRecipientItem--mobile"
  >
    <div
      class="flex flex-col items-center space-y-4 sm:flex-row sm:space-x-4 sm:space-y-0"
    >
      <div
        class="flex w-full min-w-0 flex-1 flex-col my-0 sm:w-auto sm:items-start sm:space-x-0 sm:space-y-1"
      >
        <div
          class="flex w-full flex-1 flex-row items-center justify-between bg-theme-secondary-100 px-4 py-3 dim:bg-theme-dim-950 dark:bg-theme-dark-950 sm:bg-transparent sm:p-0 dim:sm:bg-transparent dark:sm:bg-transparent"
        >
          <div
            class="flex w-full items-center justify-between"
          >
            <div
              class="whitespace-nowrap text-sm font-semibold leading-[17px] text-theme-secondary-700 dim:text-theme-dim-500 dark:text-theme-secondary-500"
            >
              Recipient #2
            </div>
            <button
              class="relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-all duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none p-0 text-theme-secondary-700 dim:text-theme-dim-50 dark:text-theme-secondary-500"
              data-testid="AddRecipientItem--deleteButton_mobile"
              type="button"
            >
              <div
                class="flex items-center gap-2"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="trash"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          class="px-4 pb-4 pt-3 sm:w-full sm:p-0"
        >
          <div>
            <div
              class="space-y-4"
            >
              <div>
                <div
                  class="mb-2 text-sm font-semibold leading-[17px] text-theme-secondary-700 dim:text-theme-dim-200 dark:text-theme-secondary-500"
                >
                  Address
                </div>
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                >
                  <span
                    class="font-semibold text-base leading-[17px] text-sm"
                    data-testid="Address__alias"
                  >
                    <span>
                      <span>
                        <span
                          class="no-ligatures transition-colors duration-200"
                          data-testid="TruncateEnd"
                        >
                          Mainsail Wallet …
                        </span>
                      </span>
                    </span>
                  </span>
                  <span>
                    <span>
                      <span
                        class="no-ligatures min-w-0 overflow-hidden leading-[17px] text-sm text-theme-secondary-500 dark:text-theme-secondary-700 dim:text-theme-dim-200 font-semibold text-base"
                        data-testid="Address__address"
                      >
                        0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                      </span>
                    </span>
                  </span>
                </div>
              </div>
              <div>
                <div
                  class="mb-2 text-sm font-semibold leading-[17px] text-theme-secondary-700 dim:text-theme-dim-200 dark:text-theme-secondary-500"
                >
                  Value
                </div>
                <span
                  class="whitespace-nowrap text-sm font-semibold leading-[17px] text-theme-secondary-900 dim:text-theme-dim-50 dark:text-theme-secondary-200"
                  data-testid="Amount"
                >
                  1.00 DARK
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="hidden sm:block"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            class="flex flex-col items-end space-y-2"
          >
            <div
              class="whitespace-nowrap font-semibold leading-[17px] text-theme-secondary-700 dim:text-theme-dim-500 dark:text-theme-secondary-500"
            >
              <span
                class="text-sm leading-[17px]"
              >
                Amount
              </span>
            </div>
            <span
              class="whitespace-nowrap font-semibold leading-5 text-theme-secondary-900 dim:text-theme-dim-50 dark:text-theme-secondary-200"
              data-testid="Amount"
            >
              1.00 DARK
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add Recipient item > should render without exchange amount 1`] = `
<DocumentFragment>
  <div
    class="group cursor-pointer items-center rounded-lg border border-theme-primary-200 transition-all hover:bg-theme-navy-100 dim:border-theme-dim-700 dim-hover:bg-theme-dim-700 dark:border-theme-dark-700 dark:hover:bg-theme-dark-700"
    data-testid="AddRecipientItem"
  >
    <div
      class="flex items-center px-4 py-3 duration-150"
    >
      <button
        class="relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-all duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none p-1 text-theme-secondary-700 hover:bg-theme-danger-400 hover:text-white dim:text-theme-dim-200 dim-hover:text-white dark:text-theme-secondary-500 dark:hover:text-white"
        data-testid="AddRecipientItem--deleteButton-1"
        type="button"
      >
        <div
          class="flex items-center gap-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="trash"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </button>
      <div
        class="ml-4 flex w-full min-w-0 items-center justify-between border-l border-theme-primary-200 pl-4 font-semibold text-theme-secondary-700 dim:border-theme-dim-700 dim:text-theme-dim-200 dark:border-theme-dark-700 dark:text-theme-dark-200"
      >
        <div
          class="flex w-1/2 min-w-0 flex-col space-y-2 truncate"
        >
          <div
            class="text-sm leading-[17px] group-hover:text-theme-primary-900 dim:group-hover:text-theme-dim-50 dark:group-hover:text-theme-dark-200"
          >
            Recipient #2
          </div>
          <div
            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
          >
            <span
              class="font-semibold text-base leading-5 text-theme-text"
              data-testid="Address__alias"
            >
              <span>
                <span>
                  <span
                    class="no-ligatures transition-colors duration-200"
                    data-testid="TruncateEnd"
                  >
                    Mainsail Wallet …
                  </span>
                </span>
              </span>
            </span>
            <span>
              <span>
                <span
                  class="no-ligatures min-w-0 overflow-hidden text-sm leading-[17px] text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 font-semibold text-base"
                  data-testid="Address__address"
                >
                  0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                </span>
              </span>
            </span>
          </div>
        </div>
        <div
          class="flex w-1/2 min-w-0 flex-col items-end space-y-2 self-end"
        >
          <span
            class="whitespace-nowrap leading-5 group-hover:text-theme-primary-900 dim:group-hover:text-theme-dim-50 dark:group-hover:text-theme-dark-200"
            data-testid="Amount"
          >
            1.00 DARK
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
